@@ -1,4 +1,10 @@
 
+2018-03-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* screenio.c (cob_convert_key): define ALT_DEL, ALT_HOME, ALT_END,
+	  ALT_LEFT, ALT_RIGHT if they aren't defined already and map the
+	  keys that were previously converted to use these
+
 2018-03-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* screenio.c (field_accept): fixed bug #498 and ignore
